// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icon store | reducer adding iconSets to empty store 1`] = `
Object {
  "iconSets": Object {
    "example/theme": Object {
      "icons": Array [
        Object {
          "label": "Search",
          "name": "search",
          "source": "test-string",
        },
      ],
      "label": "Example",
      "name": "example/theme",
    },
  },
}
`;

exports[`icon store | reducer adding iconSets to existing store 1`] = `
Object {
  "iconSets": Object {
    "dashicons": Object {
      "icons": Array [
        Object {
          "label": "Menu",
          "name": "dashicons-menu",
        },
      ],
      "label": "Dashicons",
      "name": "dashicons",
    },
    "example/theme": Object {
      "icons": Array [
        Object {
          "label": "Search",
          "name": "search",
          "source": "test-string",
        },
      ],
      "label": "Example",
      "name": "example/theme",
    },
  },
}
`;

exports[`icon store | reducer removing iconSets 1`] = `
Object {
  "iconSets": Object {
    "theme": Object {
      "icons": Array [
        Object {
          "label": "Menu",
          "name": "theme-menu",
        },
      ],
      "label": "Theme",
      "name": "theme",
    },
  },
}
`;
